配置系统基本完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,13 @@
         "ctime": "cpp",
         "ratio": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp"
-    }
+        "cinttypes": "cpp",
+        "strstream": "cpp",
+        "complex": "cpp",
+        "iomanip": "cpp",
+        "cfenv": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
+    },
+    "cmake.configureOnOpen": false
 }
