添加日志系统的文档注释

--- a/bin/conf/log.yml
+++ b/bin/conf/log.yml
@@ -7,7 +7,7 @@ logs:
         file: root.txt
       - type: StdoutLogAppender
   - name: system
-    level: debug
+    level: error
     formatter: "%d%T%m%n"
     appenders:
       - type: FileLogAppender
