--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 
 set(LIB_SRC
+	sylar/http/http_parser.cpp
+	sylar/http/http.cpp
+	sylar/http/http11_parser.rl.cpp
+	sylar/http/httpclient_parser.rl.cpp
 	sylar/address.cpp
 	sylar/bytearray.cpp
 	sylar/config.cpp
@@ -113,6 +117,19 @@ add_dependencies(test_bytearray sylar)
 force_redefine_file_macro_for_sources(test_bytearray) #__FILE__
 # target_link_libraries(test_config sylar -L/usr/local/lib/libyaml-cpp.so -lyaml-cpp)
 target_link_libraries(test_bytearray ${LIBS})
+
+add_executable(test_http tests/test_http.cpp)
+add_dependencies(test_http sylar)
+force_redefine_file_macro_for_sources(test_http) #__FILE__
+# target_link_libraries(test_config sylar -L/usr/local/lib/libyaml-cpp.so -lyaml-cpp)
+target_link_libraries(test_http ${LIBS})
+
+
+add_executable(test_http_parser tests/test_http_parser.cpp)
+add_dependencies(test_http_parser sylar)
+force_redefine_file_macro_for_sources(test_http_parser) #__FILE__
+# target_link_libraries(test_config sylar -L/usr/local/lib/libyaml-cpp.so -lyaml-cpp)
+target_link_libraries(test_http_parser ${LIBS})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
